// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ConfirmationModal should render correctly with basic props 1`] = `
<Modal
  onClose={[MockFunction]}
>
  <Panel
    accent={true}
    sectioned={true}
  >
    <div>
      <Button
        className="Confirm"
        onClick={[MockFunction]}
        primary={true}
        size="default"
      >
        Confirm
      </Button>
      <Button
        className="Cancel"
        onClick={[MockFunction]}
        size="default"
      >
        Cancel
      </Button>
    </div>
  </Panel>
</Modal>
`;

exports[`Component: ConfirmationModal should render correctly with open, content, title and custom verb 1`] = `
<Modal
  onClose={[MockFunction]}
  open={true}
>
  <Panel
    accent={true}
    sectioned={true}
    title="Confirmation Modal Test Title"
  >
    <div>
      <p>
        Some JSX content for the modal
      </p>
      <Button
        className="Confirm"
        onClick={[MockFunction]}
        primary={true}
        size="default"
      >
        DESTROY
      </Button>
      <Button
        className="Cancel"
        onClick={[MockFunction]}
        size="default"
      >
        Cancel
      </Button>
    </div>
  </Panel>
</Modal>
`;
